fix grid align - center

--- a/resource/css/sass/trisoap.scss
+++ b/resource/css/sass/trisoap.scss
@@ -274,6 +274,7 @@ header {
  */
 
 .flexslider {
+	margin: 0;
 	border: none;
 }
 
@@ -472,6 +473,7 @@ $buy-now-btn-width: 44%;
 		display: grid;
 		grid-template-columns: 8% 15px auto 30px auto 15px 8%;
 		grid-template-rows: 90px auto 90px;
+		align-items: center;
 	}
 
 	.buy-now:first-child {
@@ -528,18 +530,13 @@ $buy-now-btn-width: 44%;
 	.story {
 		display: grid;
 		grid-template-columns: 8% 6fr 1fr 5fr 8%;	// 6 for img, 5 for text
-		grid-template-rows: 10% auto 10%;
+		grid-template-rows: 40px auto 40px;
+		align-items: center;
 	}
 
 	.story-img {
-		position: relative;
 		grid-column: 2 / 3;	// out of 6
 		grid-row: 2 / 3;	// out of 4
-		& > img {
-			position: absolute;
-			top: 50%;
-			transform: translateY(-50%);
-		}
 	}
 
 	.story-text {
